# Scoring_API

./: .gitlab-ci.yml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  scoring_model.py  test_pytest.py  test_scoring_model.py  test_scroling_model.py
