[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Seynro <oseymur0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
configparser = "^5.3.0"
python-dotenv = "^1.0.0"
cx-oracle = "^8.3.0"
pymysql = "^1.0.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
